7/22/19 
- Enemy list now sorted alphabetically.
- Version history information updated.
- Added App Icon.
7/13/19
- Initial Release.